index.css
* {
  color:white;
  font-family: "Arial", "sans-serif", sans-serif;
  box-sizing: border-box;
}

header {
  flex: 1 80px;
}

menu {
  flex: 0;
  display: flex;
  flex-direction: row !important;
  list-style: none;
}

.navbar-brand {
  padding-left: 0.3em;
  border-bottom: solid rgb(182, 182, 182) thin;
}

menu .nav-item {
  padding: 0 0.3em;
}

body {
  display: flex;
  flex-direction: column;
  min-width: 375px;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

canvas#myCanvas {
  width: 600px;
  height: 600px;
  border: 1px solid white;
}

a:link, a:visited {
  background-color: #ff88aa;
  color: white;
  padding: 14px 25px;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

a:hover, a:active {
  background-color: #ffaacc;
}

button {
  background-color: #7700aa;
  color: white;
  padding: 14px 25px;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

button:hover, button:active {
  background-color: #9922cc;
}

div#ctrl {
  text-align:center;
  width:480px;
}

@media (max-height: 600px) {
  header {
      display: none;
  }
  footer {
      display: none;
  }
  main {
      flex: 1 100vh;
  }
}

